@@ -77,6 +77,9 @@ antiquotations with control symbol: \<^name>\<open>argument\<close>. The action
 "isabelle.antiquoted_cartouche" turns an antiquotation with 0 or 1
 arguments into this format.
 
+* Completion provides templates for named symbols with arguments,
+e.g. "\<comment> \<open>ARGUMENT\<close>" or "\<^emph>\<open>ARGUMENT\<close>".
+
 * Bibtex database files (.bib) are semantically checked.
 
 * Action "isabelle.preview" is able to present more file formats,
